--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "4.4.6",
     "nativescript-angular": "4.4.1",
     "nativescript-pro-ui": "3.2.0",
+    "nativescript-secure-storage": "^2.2.1",
     "nativescript-theme-core": "1.0.4",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.5.2",
