--- a/app/App_Resources/Android/settings.json
+++ b/app/App_Resources/Android/settings.json
@@ -1,1 +1,5 @@
-{"appId":"id.velix.mobile","targetSdkVersion":22,"minSdkVersion":null}
+{
+  "appId": "id.velix.mobile",
+  "targetSdkVersion": 22,
+  "minSdkVersion": 22
+}
